# aicomm

./: .env  .pre-commit-config.yaml  Dockerfile  Dockerfile_amd  Dockerfile_arm  Makefile  _typos.toml  ai.rest  clickhouse-compose.yaml  cursor_mac_id_modifier.sh  docker-compse.yaml  init-pgvector.sh  test.rest
.github/workflows/: build.yml
chat/: .env  .gitignore  Cargo.toml  deny.toml  依赖升级.md
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: ollama.rs  openai.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: ollama.rs  openai.rs
chat/analytics_server/: Cargo.toml  analytics.yaml  build.rs
chat/analytics_server/examples/: sender.rs
chat/analytics_server/src/: config.rs  error.rs  events.rs  handler.rs  lib.rs  main.rs  openapi.rs
chat/analytics_server/src/pb/: analytics.rs
chat/bot_server/: .gitignore  Cargo.toml  bot.yaml
chat/bot_server/src/: config.rs  lib.rs  notify.rs  server.rs
chat/chat_server/: Cargo.toml  app.yaml  test.rest
chat/chat_server/fixtures/: test.sql
chat/chat_server/src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat/chat_server/src/handlers/: agent.rs  auth.rs  mod.rs
chat/chat_server/src/models/: agents.rs  chat.rs  message.rs  mod.rs  user.rs
chat/chat_test/: Cargo.toml  app.yaml
chat/chat_test/tests/: chat.rs
chat/core_lib/: Cargo.toml
chat/core_lib/src/: lib.rs
chat/core_lib/src/middlewares/: auth.rs
chat/migrations/: 20250420124311_agent.sql  20250422160347_messages.sql  20250509100510_agent.sql
chat/notify_server/: Cargo.toml  index.html  notify.yaml
chat/notify_server/src/: config.rs  lib.rs  main.rs
chat/simulator/: Cargo.toml
chat/simulator/src/: config.rs  convert.rs  faker.rs  lib.rs  main.rs
chat/swiftide_pgvector/: Cargo.toml
chat/swiftide_pgvector/examples/: index_codebase.rs  indexer.rs  indexer_code.rs  searcher.rs  searcher_code.rs  test.rs
chat/swiftide_pgvector/src/: lib.rs
chatapp/: deny.toml  package.json  vite.config.js
chatapp/src/: App.vue  utils.js
chatapp/src-tauri/: Cargo.toml
chatapp/src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
chatapp/src/store/: index.js
chatapp/src/views/: Login.vue
e2e/: package-lock.json  package.json
e2e/tests/: chat.spec.ts
fixtures/: analytics.yaml  app.yaml  bot.yaml  notify.yaml
k8s/: chat-server.yaml  clickhouse.yaml  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  service.yaml
protos/: clickhouse.sql  messages.proto
superset/: .gitignore
swiftide-pgvector/: Cargo.toml
swiftide-pgvector/examples/: indexer.rs  indexer_code.rs  searcher.rs  searcher_code.rs
swiftide-pgvector/src/: lib.rs
volumes/db/data/pgdata/base/1/: 1259  2619  2696
volumes/db/data/pgdata/base/16384/: pg_filenode.map
volumes/db/data/pgdata/base/5/: pg_internal.init
volumes/db/data/pgdata/global/: 1260  1262  2671  pg_control
volumes/db/data/pgdata/pg_stat/: pgstat.stat
