[package]
name = "swiftide-pgvector"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
swiftide = { version = "0.26.0", features = [
    "fastembed",
    "ollama",
    "openai",
    "pgvector",
    "tree-sitter"
] }
chrono = "=0.4.39"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-rustls","chrono"] }
tracing = "0.1.41"
async-trait = "0.1.88"
derive_builder = "0.20.2"
pgvector = { version = "0.4.0", features = ["sqlx"] }
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "net", "macros", "io-util"] }
