[package]
name = "ai_sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
reqwest = { version = "0.11.27", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { workspace = true, features = ["derive"] }


[dev-dependencies]
tokio = { workspace = true }
