[package]
name = "swiftide_pgvector"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# anyhow = "1.0.98"
# swiftide = { version = "0.26.0", features = [
#     "openai",
#     "pgvector",
#     "tree-sitter",
#     "swiftide-agents",
# ] }
# swiftide-macros = "0.26.0"
# chrono = { workspace = true }
# sqlx = { workspace = true }
# tracing = { workspace = true }
# async-trait = "0.1.88"
# derive_builder = "0.20.2"
# # pgvector = { version = "0.4.0", features = ["sqlx"] }
# serde_json = { workspace = true }
# tracing-subscriber = { workspace = true }
# tokio = { version = "1.45", features = [
#   "rt-multi-thread",
#   "time",
# ], default-features = false }
# serde = { workspace = true}
# reqwest = { version = "0.12", default-features = false }
tokio = { workspace = true }
swiftide = { version = "0.26.0", features = [
  "pgvector",
  "swiftide-agents",
  "openai",
  "tree-sitter",
] }
# swiftide-macros = { version = "0.26.0" }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
async-openai = { version = "0.28", default-features = false }
